tests/sources/invalid/classes/constructor_call_no_ctor.fire
// Semantic error: 'new ClassName(...)' where the class has no declared
// constructor.

class NoCtor {
    x: int32;
}

fn constructor_call_no_ctor() -> void {
    obj: NoCtor = new NoCtor(5);  //~ ERROR FS-SEM-0010 @23
}
